# bcl-scribble

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  locally-run-benchmarks.sh  run-benchmarks.sh  sbatch-run-benchmarks.sh
bcl_ext/: CMakeLists.txt
bcl_ext/bcl_ext/: bcl.hpp
bcl_ext/bcl_ext/backends/mpi/: backend.hpp  comm.hpp  mpi_types.hpp  ops.hpp
bcl_ext/bcl_ext/core/: alloc.hpp
main/: CMakeLists.txt  SpinLock.cpp  main.cpp  mpi_ops.hpp
main/src/: McsLock.cpp  SpinLock.cpp  SpinLock2.cpp  TasLock.cpp  TtsLock.cpp  log.cpp  main.cpp
main/src/benchmark/: NullReporter.cpp  benchmarks.cpp  main.cpp  mpi_benchmark.cpp
main/src/lock/: AdvancedMcsLock.cpp  DMcsLock.cpp  DashLock.cpp  DisableableTasLock.cpp  DisableableTtsLock.cpp  HMCSLock.cpp  HybridLock.cpp  Lock.cpp  McsLock.cpp  McsLockBcl.cpp  McsLockFlushEveryOperation.cpp  McsLockFlushLocal.cpp  McsLockMpiFlushLocal.cpp  McsLockMpiFlushLocalAll.cpp  McsLockMpiRequest.cpp  McsLockOwnWindow.cpp  McsLockTwoSided.cpp  MpiWinLock.cpp  MyShuffleLock.cpp  ShflLock.cpp  TasLock.cpp  TasLockOwnWindow.cpp  TasLockOwnWindowCas.cpp  TtsLock.cpp  TtsLockOwnWindow.cpp  TtsLockOwnWindowCas.cpp
main/src/mpi_utils/: Window.cpp  mpi_type_provider.cpp  mpi_utils.cpp
plot/: plot.py
sbatch/: template.sbatch
